# FakeMFRC552

./: README.md  mfrc522.py  package_description.rst  setup.cfg  setup.py
