[metadata]
description-file = README.md
# replace with your username:
name = mfrc522
version = 0.0.2
author = Poh Tze Ven
author_email = frasker@hotmail.com
description = Simple fake MFRC522 library for rapid software development and testing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chaosAD/FakeMfrc522
project_urls =
    Bug Tracker = https://github.com/chaosAD/FakeMfrc522/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
